--- a/jenkinsfile
+++ b/jenkinsfile
@@ -4,7 +4,7 @@ pipeline{
     stages{
         stage('Initialize'){
             steps{
-                sh script: '''pathToPomFile=pom.xml
+                sh script: '''pathToPomFile=demo.txt
                 version_line=$(cat $pathToPomFile | grep "<version>" | head -1)
                 version_line=${version_line#*>}
                 version=${version_line%<*}
