--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline{
 
         stage('Check'){
             steps{
-                echo "${demo.txt}"
+                cat demo.txt
             }
         }
     }
