--- a/jenkinsfile
+++ b/jenkinsfile
@@ -23,7 +23,7 @@ pipeline{
 
         stage('Check'){
             steps{
-                sh script: cat demo.txt
+                sh script: '''cat demo.txt'''
             }
         }
     }
