--- a/jenkinsfile
+++ b/jenkinsfile
@@ -20,7 +20,7 @@ pipeline{
                 sed -i.bak "/<version>/s/>.*</>${newPomVersion}-SNAPSHOT</" demo.txt
                 git add demo.txt
                 git commit -m "Changing Pom Version"
-                git push''', returnStdout: true 
+                git push origin HEAD:main''', returnStdout: true 
             }
         }
 
